--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 </a>
             </div>
         </main>
+        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
